--- a/views/testrun.ejs
+++ b/views/testrun.ejs
@@ -4,7 +4,7 @@
 	<script src="https://hcaptcha.com/1/api.js" async defer></script>
 </header>
 <body>
-	<form action="/" method="POST">
+	<form action="/verify" method="POST">
       <input type="text" name="email" placeholder="Email" />
       <input type="password" name="password" placeholder="Password" />
       <div class="h-captcha" data-sitekey="328ccb98-ee74-4e91-929f-205639be4bcc"></div>
