--- a/views/client.ejs
+++ b/views/client.ejs
@@ -18,7 +18,7 @@
 
         
 
-        const WS_URL = 'ws://justintestapp:3001';
+        const WS_URL = 'ws://justintestapp.herokuapp.com:3001';
 
         const ws = new WebSocket(WS_URL);
 
