--- a/views/test.ejs
+++ b/views/test.ejs
@@ -74,9 +74,9 @@
 		};
 	  
 	  annyang.addCommands(commands);
-	  annyang.setLanguage("en-US");*/
+	  annyang.setLanguage("en-US");
 	  
-	  annyang.start({ autoRestart: true, continuous: false });
+	  annyang.start({ autoRestart: true, continuous: false });*/
 	  
 	  
 	  console.log(annyang.isListening());
