--- a/views/test.ejs
+++ b/views/test.ejs
@@ -76,10 +76,10 @@
 	  annyang.addCommands(commands);
 	  annyang.setLanguage("en-US");
 	  
-	  annyang.start({ autoRestart: true, continuous: false });*/
+	  annyang.start({ autoRestart: true, continuous: false });
 	  
 	  
-	  console.log(annyang.isListening());
+	  console.log(annyang.isListening());*/
 	  
 	  
 	navigator.getMedia = ( navigator.getUserMedia ||
