--- a/views/test.ejs
+++ b/views/test.ejs
@@ -148,7 +148,7 @@
 
         }
 		
-		const WS_URL = 'ws://localhost:3001';
+		const WS_URL = 'ws://https://justintestapp.herokuapp.com/:3001';
 
         const FPS = 60;
 
