--- a/views/client.ejs
+++ b/views/client.ejs
@@ -19,6 +19,8 @@
         
 
         const WS_URL = location.origin.replace(/^http/, 'ws') + ':3001';
+	
+	console.log(location.origin.replace(/^http/, 'ws'));
 
         const ws = new WebSocket(WS_URL);
 
