--- a/views/test.ejs
+++ b/views/test.ejs
@@ -148,7 +148,9 @@
 
         }
 		
-		const WS_URL = 'ws://https://justintestapp.herokuapp.com/:3001';
+		const WS_URL = location.origin.replace(/^http/, 'ws') + ':3001';
+		
+		console.log(location.origin.replace(/^http/, 'ws'));
 
         const FPS = 60;
 
