--- a/views/client.ejs
+++ b/views/client.ejs
@@ -18,9 +18,9 @@
 
         
 
-        const WS_URL = location.origin.replace(/^http/, 'ws') + ':3001';
+        const WS_URL = location.origin.replace(/^http/, 'w') + ':3001';
 	
-	console.log(location.origin.replace(/^http/, 'ws'));
+	console.log(location.origin.replace(/^http/, 'w'));
 
         const ws = new WebSocket(WS_URL);
 
