--- a/views/test.ejs
+++ b/views/test.ejs
@@ -148,9 +148,9 @@
 
         }
 		
-		const WS_URL = location.origin.replace(/^http/, 'w') + ':3001';
+		const WS_URL = location.origin.replace(/^http/, 'ws') + ':3001';
 		
-		console.log(location.origin.replace(/^http/, 'w'));
+		console.log(location.origin.replace(/^http/, 'ws') + ':3001');
 
         const FPS = 60;
 
