--- a/views/client.ejs
+++ b/views/client.ejs
@@ -20,7 +20,7 @@
 
         const WS_URL = location.origin.replace(/^http/, 'ws') + ':3001';
 	
-	console.log(location.origin.replace(/^http/, 'ws') + ':3001');
+	console.log(WS_URL);
 
         const ws = new WebSocket(WS_URL);
 
