--- a/views/test.ejs
+++ b/views/test.ejs
@@ -150,7 +150,7 @@
 		
 		const WS_URL = location.origin.replace(/^http/, 'ws') + ':3001';
 		
-		console.log(location.origin.replace(/^http/, 'ws') + ':3001');
+		console.log(WS_URL);
 
         const FPS = 60;
 
