--- a/views/test.ejs
+++ b/views/test.ejs
@@ -92,7 +92,7 @@
 		       
         function hasGetUserMedia() {
 
-   	 return !!(navigator.getUserMedia || navigator.webkitGetUserMedia ||navigator.mozGetUserMedia || navigator.msGetUserMedia);
+   	 return (navigator.getUserMedia || navigator.webkitGetUserMedia ||navigator.mozGetUserMedia || navigator.msGetUserMedia);
 
 	}
 
