--- a/views/test.ejs
+++ b/views/test.ejs
@@ -95,10 +95,10 @@
    	 return (navigator.getUserMedia || navigator.webkitGetUserMedia ||navigator.mozGetUserMedia || navigator.msGetUserMedia);
 
 	}*/
-	console.log(navigator.getUserMedia());
+	console.log(navigator.getUserMedia);
 	  var video = document.getElementById("streamvideo");
 
-		if (navigator.getUserMedia()) {
+		if (navigator.getUserMedia) {
 		  navigator.getMedia ({ video: true, audio: false },
 			function (stream) {
 			  video.srcObject = stream;
@@ -156,7 +156,7 @@
 
         }
 		
-		const WS_URL = location.origin.replace(/^http/, 'ws') + ':3001';
+		const WS_URL = location.origin.replace(/^http/, 'ws');
 		
 		console.log(WS_URL);
 
