--- a/views/test.ejs
+++ b/views/test.ejs
@@ -82,7 +82,7 @@
 	  console.log(annyang.isListening());*/
 	  
 	  
-	/*navigator.getMedia = ( navigator.getUserMedia ||
+	navigator.getMedia = ( navigator.getUserMedia ||
 
                        navigator.webkitGetUserMedia ||
 
@@ -94,7 +94,7 @@
 
    	 return (navigator.getUserMedia || navigator.webkitGetUserMedia ||navigator.mozGetUserMedia || navigator.msGetUserMedia);
 
-	}*/
+	}
 	console.log(navigator.getUserMedia);
 	  var video = document.getElementById("streamvideo");
 
