--- a/views/test.ejs
+++ b/views/test.ejs
@@ -156,7 +156,7 @@
 
         }
 		
-		const WS_URL = location.origin.replace('http', 'wss') + ':3001';
+		const WS_URL = location.origin.replace('http', 'ws') + ':3001';
 		
 		console.log(WS_URL);
 
