--- a/views/client.ejs
+++ b/views/client.ejs
@@ -18,7 +18,7 @@
 
         
 
-        const WS_URL = location.origin.replace('http', 'wss') + ':3001';
+        const WS_URL = location.origin.replace('http', 'ws') + ':3001';
 	
 	console.log(WS_URL);
 
