--- a/views/test.ejs
+++ b/views/test.ejs
@@ -156,7 +156,7 @@
 
         }
 		
-		const WS_URL = location.origin.replace('http', 'ws');
+		const WS_URL = location.origin.replace('http', 'ws') + ':3000';
 		
 		console.log(WS_URL);
 
