--- a/views/client.ejs
+++ b/views/client.ejs
@@ -18,7 +18,7 @@
 
         
 
-        const WS_URL = location.origin.replace('http', 'ws') + ':3000';
+        const WS_URL = "https://justinclient.herokuapp.com/"
 	
 	console.log(WS_URL);
 
