--- a/views/test.ejs
+++ b/views/test.ejs
@@ -156,7 +156,7 @@
 
         }
 		
-		const WS_URL = "https://justinclient.herokuapp.com/";
+		const WS_URL = "wss://justinclient.herokuapp.com/";
 		
 		console.log(WS_URL);
 
