--- a/views/client.ejs
+++ b/views/client.ejs
@@ -18,7 +18,7 @@
 
         
 
-        const WS_URL = "https://justinclient.herokuapp.com/"
+        const WS_URL = "wss://justinclient.herokuapp.com/"
 	
 	console.log(WS_URL);
 
