--- a/views/test.ejs
+++ b/views/test.ejs
@@ -150,9 +150,8 @@
 			var dataurl = window.URL.createObjectURL(sendData);*/
 
 			senddata = dataURItoBlob(data);
-			var dataurl = URL.createObjectURL(senddata);
 			//console.log(dataurl);
-            return dataurl;
+            return senddata;
 
         }
 		
