--- a/views/client.ejs
+++ b/views/client.ejs
@@ -29,9 +29,9 @@
         ws.onmessage = message => {
 
             // set the base64 string to the src tag of the image
-			/*var url = URL.createObjectURL(message.data);*/
-			console.log(message.data);
-            img.src = message.data;
+			var url = URL.createObjectURL(message.data);
+			console.log(url);
+            img.src = url;
 
         }
 
