--- a/views/test.ejs
+++ b/views/test.ejs
@@ -166,7 +166,7 @@
 
 				const data = canvas.toDataURL('image/webp');
 			//var data = canvas.getContext('2d');
-			//var sendData = new Blob([data], {'type': 'image/png'});
+			var sendData = new Blob([data], {'type': 'image/webp'});
 			//var dataurl = window.URL.createObjectURL(sendData);
 			
 			
@@ -174,7 +174,7 @@
 			//console.log(senddata);
 			//var dataurl = URL.createObjectURL(senddata);
 			//console.log(dataurl);
-            return data;
+            return sendData;
 
         }
 		/*
